update paths in ini, should probably follow up with actually checking for correct paths

--- a/app/conf.ini
+++ b/app/conf.ini
@@ -1,7 +1,7 @@
 #Path to Utilities
-minimap_path=./tools/minimap2/minimap2
-samtools_path=./tools/samtools/samtools
-bedtools_path=./tools/bedtools/bin/bedtools
+minimap_path=minimap2
+samtools_path=samtools
+bedtools_path=bedtools
 
 #Advanced options
 strand_forwards_identifier=GGG
