Fix input processing to avoid unnecessary memory usage
Switch to generator for processing stranding, so the full input file isn't read into memory.
Also, full read file is only read if stranding is performed, otherwise, first 20 reads are checked, and then the pipeline moves on to minimap
Some other minor refactoring/renaming was also performed

--- a/app/conf.ini
+++ b/app/conf.ini
@@ -23,7 +23,7 @@ max_single_base_to_length_ratio=0.7
 max_splice_difference=10
 
 #Command options
-minimap_options=-ax splice -G 5k --secondary=no
+minimap_options=-ax splice -G 5k --secondary=no -t 8
 samtobam_options=view -Sb
 bamtobed_options=bamtobed -i
 bamtobed_split_options=bamtobed -split -i
