--- a/app/conf.ini
+++ b/app/conf.ini
@@ -1,7 +1,7 @@
 #Path to Utilities
-minimap_path=./tools/minimap2/minimap2
-samtools_path=./tools/samtools/samtools
-bedtools_path=./tools/bedtools/bin/bedtools
+minimap_path=minimap2
+samtools_path=samtools
+bedtools_path=bedtools
 
 #Advanced options
 strand_forwards_identifier=GGG
@@ -23,7 +23,7 @@ max_single_base_to_length_ratio=0.7
 max_splice_difference=10
 
 #Command options
-minimap_options=-ax splice -G 5k --secondary=no
+minimap_options=-ax splice -G 5k --secondary=no -t 8
 samtobam_options=view -Sb
 bamtobed_options=bamtobed -i
 bamtobed_split_options=bamtobed -split -i
